2008-01-07  Akim Demaille  <demaille@gostai.com>

	1.6pre.
	* configure.ac: here.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Fix uvalue_cast.
	* src/liburbi/uobject/urbi/uvalue.hh: The uvalue_cast needs its
	parameter without reference too.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Simplify reference stripping.
	Remove the refs at definition site, instead of use site.
	* src/liburbi/uobject/urbi/uvalue.hh: Use libport::unref_traits.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template: Simplify.
	(utrait): Remove.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	uvalue_cast<Type>(uvalue).
	* src/liburbi/uobject/urbi/ucallbacks.hh.template (urbi_cast): Rename as...
	(uvalue_caster): this.
	(uvar_ref_traits): New.
	(uvalue_cast): New.
	Use it.
	And move them all into...
	* src/liburbi/uobject/urbi/uvalue.hh: here.
	* src/liburbi/uobject/uvalue-common.cc: Adjust.

	* src/liburbi/uobject/utypes-common: Split into...
	* uobject/urbi/uproperty.hh, uobject/urbi/ublend-type.hh: these.
	Simplify the dependencies.

	* src/liburbi/uobject/uvalue-common.cc (UVar::operator=): Move to...
	* src/liburbi/uobject/uvar-common.cc: here.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	UValue cast: use a templated syntax.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template,
	* src/liburbi/uobject/uvalue-common.cc (cast): Remove.
	(urbi_cast, URBI_cast): New.
	Use them.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Tidy the casts.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template: Reorder.
	* src/liburbi/uobject/uobject-common.cc (cast): Move to...
	* src/liburbi/uobject/uvalue-common.cc: here.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Do what the previous patches says.
	* src/liburbi/tests/liburbi-check.as: It is quite stupid to remove
        a file just before reading it.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Fix test suite.
	* src/liburbi/tests/liburbi-check.as: It is quite stupid to remove
	a file just before reading it.
